animated landing page, ken burns style

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,9 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LandingActivity">
+    tools:context=".SplashScreenActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.flaviofaria.kenburnsview.KenBurnsView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/kenburns" />
+
+    <ImageView
+        android:id="@+id/iconGem"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        app:tint="#4a3352"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/gem"/>
+
+    <com.royrodriguez.transitionbutton.TransitionButton
+        android:id="@+id/btnLogin"
+        android:layout_width="340dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/iconGem"
+        android:text="Log In"
+        android:layout_marginTop="240dp"
+        app:loaderColor="@android:color/white"
+        android:textColor="@android:color/white"/>
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="70dp"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/tvSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:text="Don't have an account?" />
+
+        <TextView
+            android:id="@+id/btnSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_marginStart="4dp"
+            android:textColor="#4a3352"
+            android:layout_toEndOf="@id/tvSignUp"
+            android:layout_alignBottom="@id/tvSignUp"
+            android:text="Sign Up!"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
+
