--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
         android:textSize="16dp"
         android:layout_below="@id/tvWelcomeTo"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="280dp"/>
+        android:layout_marginTop="300dp"/>
 
     <EditText
         android:id="@+id/etUsername"
@@ -99,37 +99,13 @@
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Log In"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="48dp"
         android:layout_below="@id/etPassword"
         android:layout_centerHorizontal="true"
         app:loaderColor="@android:color/white"
         android:textColor="@android:color/white"/>
-
-    <TextView
-        android:id="@+id/tvSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="45dp"
-        android:layout_below="@id/btnLogin"
-        android:text="Don't have an account?" />
-
-    <TextView
-        android:id="@+id/btnSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_marginStart="4dp"
-        android:textColor="#4a3352"
-        android:layout_toEndOf="@id/tvSignUp"
-        android:layout_alignBottom="@id/tvSignUp"
-        android:text="Sign Up!"/>
 
 </RelativeLayout>
