added loading indicators when querying experiences, conversations

--- a/app/src/main/res/layout/fragment_commitments.xml
+++ b/app/src/main/res/layout/fragment_commitments.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.CommitmentsFragment">
+
+    <RelativeLayout
+        android:id="@+id/rlLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading Gems..."
+            android:textSize="28dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@id/ivGem"
+            android:layout_alignBottom="@id/ivGem"/>
+
+        <ImageView
+            android:id="@+id/ivGem"
+            app:tint="#4a3352"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/gem"/>
+
+    </RelativeLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,4 +46,4 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-</FrameLayout>
+</RelativeLayout>
