--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,6 +32,31 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/rlNoGems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Gems Found!"
+            android:textSize="27dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@id/ivNoGem"
+            android:layout_alignBottom="@id/ivNoGem"/>
+
+        <ImageView
+            android:id="@+id/ivNoGem"
+            app:tint="#4a3352"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/gem"/>
+
+    </RelativeLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
